[package]
name = "is_empty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_empty_derive = { version = "0.1.0", path = "../is_empty_derive" }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
