[package]
name = "is_empty"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Easily check if the struct is empty."
documentation = "https://docs.rs/is_empty"
repository = "https://github.com/puilp0502/is_empty"
readme = "../README.md"
keywords = ["serde", "macro", "derive", "is_empty"]

[features]
std_impls = []

[dependencies]
is_empty_derive = { version = "0.1.0", path = "../is_empty_derive" }

[dev-dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
